plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'code'
version = '0.0.1-SNAPSHOT'
description = 'Project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    /* --- Spring 기본 --- */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // 템플릿이 필요 없으면 thymeleaf는 빼도 됨
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    /* --- WebClient (HIRA 등) --- */
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'io.projectreactor.netty:reactor-netty'

    /* --- AWS S3 --- */
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.4.0'

    /* --- JWT --- */
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.11.5'

    /* --- Lombok --- */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    /* --- DB Driver --- */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* --- QueryDSL (Jakarta) --- */
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    /* --- 기타 --- */
    implementation 'com.google.code.gson:gson:2.11.0'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    /* --- Test --- */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}